--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Full Stack Web Developer</h1>
 
             <!-- paragraph = p -->
-            <p>Hi! My name is John Ervin and I have 1 year experience as Frontend Web Developer - Modifier(WordPress) and 3 years as Quality Assurance.</p>
+            <p>Hi! My name is John Ervin and I have 1 year experience as Frontend Web Developer - Modifier(WordPress) and 3 years as Post-deployment & Quality Assurance.</p>
 
             <img id="profile" class="img-fluid mb-5" src="images/ervin.jpg" alt="me, myself, and I">
 
