--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
             <a class="btn btn-success" href="mailto:ervin.rosal97@gmail.com">Let's Work Together</a>
 
+            <a class="btn btn-warning" href="https://www.jerc.site">Undone Portfolio</a>
+
         </section>
 
     </div>
