--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <a class="btn btn-success" href="mailto:ervin.rosal97@gmail.com">Let's Work Together</a>
 
-            <a class="btn btn-warning" href="https://www.jerc.site">Undone Portfolio</a>
+            <a class="btn btn-warning" href="https://www.jerc.site" target="_blank">Undone Portfolio</a>
 
         </section>
 
