--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section id="landing" class="text-center mt-5">
 
             <!-- headings = h1 - h6 -->
-            <h1>Full Stack Web Developer</h1>
+            <h1>Frontend Web Developer</h1>
 
             <!-- paragraph = p -->
             <p>Hi! My name is John Ervin and I have 1 year experience as Frontend Web Developer - Modifier(WordPress) and 3 years as Post-deployment & Quality Assurance.</p>
